--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@deepstream/types": "^2.1.0",
     "iw-base": "^0.0.1",
     "lodash": "^4.17.15",
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "onecolor": "^3.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.150",
