--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@deepstream/client": "^5.1.10",
     "@deepstream/types": "^2.2.0",
     "iw-base": "^0.0.1",
+    "iw-ioc": "^0.0.1",
     "lodash": "^4.17.15",
     "mqtt": "^3.0.0",
     "onecolor": "^3.1.0"
