--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,6 @@ modules:
             - { color_temp_percent: 100 }
             # - { color: { r: 255, g: 147, b:  41 } } # candle
             # - { color: { r: 255, g: 117, b: 107 } } # aprikose
-            # - { color: { r:  97, g: 255, b: 121 } } # gloom
             # - { color: { r: 191, g: 102, b: 255 } } # flieder
             # - { color: { h: 220, s:  18 } }         # blue sky
             - { color: { h:  52, s: 100 } }         # yellow
@@ -65,6 +64,7 @@ modules:
             - { color: { r: 143, g:  38, b: 134 } }
             # - { color: { r:  74, g:  65, b: 138 } }
             - { color: { r: 108, g: 131, b: 186 } } # X
+            - { color: { r:  97, g: 255, b: 121 } } # gloom
             - { color: { r: 169, g: 214, b:  43 } }
             - { color: { r: 214, g: 228, b:  75 } } # last
             - { color_temp_percent: 50 }
