--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "@types/lodash": "^4.14.161",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
+  },
+  "peerDependencies": {
+    "rxjs": "^7.5.1"
   }
 }
