--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
     "iw-ioc": "^0.0.1",
     "lodash": "^4.17.15",
     "mqtt": "^3.0.0",
-    "onecolor": "^3.1.0"
+    "onecolor": "^3.1.0",
+    "rxjs": "^7.5.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.161",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
-  },
-  "peerDependencies": {
-    "rxjs": "^7.5.1"
   }
 }
