switch to patched version of deepstream client

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "@deepstream/client": "^5.2.5",
+    "@deepstream/client": "github:Vortex375/deepstream.io-client-js#master",
     "@deepstream/types": "^2.2.0",
     "iw-base": "^0.0.1",
     "iw-ioc": "^0.0.1",
